test/expected/explain_ff_v-c.out
explain friend void f()
        ^
9: error: "friend": unsupported keyword in C
